--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: java
 
+dist: trusty
 
+services:
+  - mysql
+
+before_script:
+  # Set up MySQL
+  - mysql -e "CREATE DATABASE world CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;"
+  - mysql -u root -e "CREATE USER 'world'@'localhost' IDENTIFIED BY 'world';"
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON world.* TO 'world'@'localhost';"
