--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 
+sudo: required
+
 dist: trusty
 
 services:
@@ -11,3 +13,6 @@ before_script:
   - mysql -e "CREATE DATABASE world CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;"
   - mysql -u root -e "CREATE USER 'world'@'localhost' IDENTIFIED BY 'world';"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON world.* TO 'world'@'localhost';"
+
+after_success:
+  - docker-compose up --abort-on-container-exit
