--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON world.* TO 'world'@'localhost';"
 
 after_success:
-  - docker-compose up --abort-on-container-exit
+  - docker-compose up --abort-on-container-exit -d
