--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,9 @@ before_script:
   - mysql -u root -e "CREATE USER 'world'@'localhost' IDENTIFIED BY 'world';"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON world.* TO 'world'@'localhost';"
 
+script:
+  - # Install database data
+  - mysql -u root -D world -v -e "source db/world.sql"
+
 after_success:
   - docker-compose up -d
