--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
 
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
