--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,11 @@ sudo: required
 dist: trusty
 
 services:
-  - mysql
   - docker
 
-before_script:
-  # Set up MySQL
-  - mysql -e "CREATE DATABASE world CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;"
-  - mysql -u root -e "CREATE USER 'world'@'localhost' IDENTIFIED BY 'world';"
-  - mysql -u root -e "GRANT ALL PRIVILEGES ON world.* TO 'world'@'localhost';"
-
 script:
-  # Install database data
-  - mysql -u root -D world -v -e "source db/world.sql" >/dev/null 2>&1
   # Run unit tests
   - mvn test
 
 after_success:
-  # For testing purposes, this should be removed later
-  - docker-compose up --build -d
+  - docker-compose up --abort-on-container-exit
