Test dockerfile pathing

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -5,11 +5,11 @@ FROM mysql
 WORKDIR /tmp
 
 # Copy all the files to the working directory of the container
-COPY db/world/*.sql /tmp/
-COPY db/world/*.dump /tmp/
+COPY world/*.sql /tmp/
+COPY world/*.dump /tmp/
 
 # Copy the main SQL file to docker-entrypoint-initdb.d.
-COPY db/world.sql /docker-entrypoint-initdb.d
+COPY world.sql /docker-entrypoint-initdb.d
 
 # Set the root password
 ENV MYSQL_ROOT_PASSWORD mysql
