--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -5,11 +5,10 @@ FROM mysql
 WORKDIR /tmp
 
 # Copy all the files to the working directory of the container
-COPY world/*.sql /tmp/
-COPY world/*.dump /tmp/
+COPY test_db/*.sql /tmp/
 
 # Copy the main SQL file to docker-entrypoint-initdb.d.
-COPY world.sql /docker-entrypoint-initdb.d
+COPY test_db/world.sql /docker-entrypoint-initdb.d
 
 # Set the root password
 ENV MYSQL_ROOT_PASSWORD mysql
