--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,43 @@
 language: java
 
-sudo: required
+sudo: false
 
-dist: trusty
+addons:
+  hosts:
+    - db
 
 services:
   - docker
 
-script:
-  # Run unit tests
-  - mvn test
+install:
+  - docker build -t database db/.
+  - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+before_script:
+  - mvn clean
+
+jobs:
+  include:
+    - stage: unit tests
+      install: skip
+      jdk: oraclejdk11
+      script: mvn test -Dtest=com.napier.sem.TestApp
+    - stage: integration tests
+      jdk: oraclejdk11
+      script: mvn test -Dtest=com.napier.sem.TestAppIntegration
+    - stage: Release
+      install: skip
+      jdk: oraclejdk11
+      script:
+        - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
+        - docker-compose up --abort-on-container-exit
+
+stages:
+  - unit tests
+  - integration tests
+  - name: Release
+    if: branch = master
 
 after_success:
-  - docker-compose up --abort-on-container-exit
+  - bash <(curl -s https://codecov.io/bash)
