--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 
     <build>
-        <defaultGoal>install</defaultGoal>
+        <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
