set passwords to "example" instead of "mysql"

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -11,4 +11,4 @@ COPY test_db/*.sql /tmp/
 COPY test_db/world.sql /docker-entrypoint-initdb.d
 
 # Set the root password
-ENV MYSQL_ROOT_PASSWORD mysql
+ENV MYSQL_ROOT_PASSWORD example
